--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-OPENAI_API_KEY=
+OPENAI_API_TYPE = "azure"
+OPENAI_API_VERSION = "2023-03-15-preview"
+OPENAI_API_BASE = "..."
+OPENAI_API_KEY = "..."
